changed config, name, discription

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -22,7 +22,7 @@
 </script>
 
 <div id="midle">
-    <p>Успей нажать на все кнопки до окончания времени</p>
+    <p>Включи все кнопки за отведенное время.</p>
     <p id="timer"></p>
 </div>
 
